test/neg/neg-serial10.errc
value_type of iterators passed to write_sequence must be Serializable.
